# Cognito-Attribute-Exporter

./: .gitignore  LICENSE  README.md  cognito_csv_deduplicator.py  cognito_exporter.py  pyproject.toml
cognito_attribute_exporter/: __init__.py  cognito_exporter.py
tests/: test_cognito_csv_deduplicator.py  test_cognito_exporter.py
